# logseq

./: .eslintrc.cjs  .prettierrc  PHASE.yml  package.json  pnpm-workspace.yaml  tsconfig.base.json
.github/workflows/: ci.yml
apps/desktop/: README.md  index.html  package.json  tsconfig.json  vite.config.ts
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/src/: main.rs
apps/legacy/: README.md
apps/mobile/: package.json  tsconfig.json
tools/: check_phase.mjs  inventory.md
transitions/: INDEX.md  SPEC.md
transitions/codex-prompts/: 01_FORK_PREP_CODEX_PROMPT.md  02_INVENTORY_CODEX_PROMPT.md  03_FILE_CORE_READONLY_CODEX_PROMPT.md  04_SIDECAR_INDEX_CODEX_PROMPT.md  05_WRITES_WAL_CODEX_PROMPT.md  06_EXTERNAL_EDITS_CODEX_PROMPT.md  07_FS_CLI_CODEX_PROMPT.md  08_DESKTOP_APP_CODEX_PROMPT.md  09_MOBILE_APP_CODEX_PROMPT.md  10_RTC_OPTIONAL_CODEX_PROMPT.md  11_ENCRYPTION_STABILITY_CODEX_PROMPT.md  12_DOCS_VERSION_RELEASE_CODEX_PROMPT.md
transitions/logseq-file-first-prompts/: 00_MASTER_GUARDRAILS.md  01_PHASE0_FORK_PREP.md  02_PHASE1_INVENTORY.md  03_PHASE2_FILE_CORE_READONLY.md  04_PHASE3_SIDECAR_INDEX.md  05_PHASE4_WRITES_WAL_ATOMIC.md  06_PHASE5_EXTERNAL_EDITS_CONFLICTS.md  07_PHASE6_CLI.md  08_PHASE7_DESKTOP_APP.md  09_PHASE8_MOBILE_APP.md  10_PHASE9_RTC_OPTIONAL.md  11_PHASE10_ENCRYPTION_STABILITY.md  12_PHASE11_DOCS_VERSION_RELEASE.md
transitions/phase-checks/: 00_GUARD_SYSTEM.md  01_FORK_PREP_CHECKS.md  02_INVENTORY_CHECKS.md  03_FILE_CORE_READONLY_CHECKS.md  04_SIDECAR_INDEX_CHECKS.md  05_WRITES_WAL_ATOMIC_CHECKS.md  (+7 more)
(+29 files in other folders)
