[package]
name = "logseq-desktop"
version = "0.0.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tauri = { version = "1.6", features = ["dialog-open", "path-all"] }
uuid = { version = "1", features = ["v4"] }

[build-dependencies]
tauri-build = { version = "1.6", features = [] }
